mac: dw3000 sending seems working.

--- a/STM32F722/DW3000/DW3000_op/DW3000_op/.vscode/settings.json
+++ b/STM32F722/DW3000/DW3000_op/DW3000_op/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdbool.h": "c",
         "dw3000_fz.h": "c",
-        "main.h": "c"
+        "main.h": "c",
+        "dw3000_send_test_fz.h": "c"
     }
 }
