mac: still working on DW3000, with extra settings, still not working well, no SFD detected. There were few SFD detecetd but not stable at all.

--- a/STM32F722/DW3000/DW3000_op/DW3000_op/.vscode/settings.json
+++ b/STM32F722/DW3000/DW3000_op/DW3000_op/.vscode/settings.json
@@ -12,6 +12,8 @@
         "string": "c",
         "string_view": "c",
         "vector": "c",
-        "dw3000_recv_test_fz.h": "c"
+        "dw3000_recv_test_fz.h": "c",
+        "stdint.h": "c",
+        "stdio.h": "c"
     }
 }
