--- a/STM32F722/ADS131M04/ADS131M04/.vscode/settings.json
+++ b/STM32F722/ADS131M04/ADS131M04/.vscode/settings.json
@@ -20,6 +20,7 @@
         "stdlib.h": "c",
         "compare": "c",
         "cstdint": "c",
-        "stdbool.h": "c"
+        "stdbool.h": "c",
+        "stdio.h": "c"
     }
 }
