mac: start working on the ADS131M04 DMA read and store data in MicroSD card. SD writing data working OK in append mode.

--- a/STM32F722/ADS131M04/ADS131M04_DMA_MicroSD/.vscode/settings.json
+++ b/STM32F722/ADS131M04/ADS131M04_DMA_MicroSD/.vscode/settings.json
@@ -5,6 +5,8 @@
         "stdbool.h": "c",
         "main.h": "c",
         "stddef.h": "c",
-        "microsd_fz.h": "c"
+        "microsd_fz.h": "c",
+        "stdarg.h": "c",
+        "fatfs.h": "c"
     }
 }
