PC: DSWR working, but it's not double sided ranging, and sometimes not very stable

--- a/STM32F722/DW3220/DSWR/Debug/makefile
+++ b/STM32F722/DW3220/DSWR/Debug/makefile
@@ -64,7 +64,7 @@ main-build: DSWR.elf secondary-outputs
 
 # Tool invocations
 DSWR.elf DSWR.map: $(OBJS) $(USER_OBJS) C:\DATA\Documents\Lab\github\HexSense_MIT\firmware\STM32F722\DW3220\DSWR\STM32F722RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "DSWR.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\DATA\Documents\Lab\github\HexSense_MIT\firmware\STM32F722\DW3220\DSWR\STM32F722RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DSWR.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -u_printf_float -o "DSWR.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\DATA\Documents\Lab\github\HexSense_MIT\firmware\STM32F722\DW3220\DSWR\STM32F722RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="DSWR.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
